--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   url_launcher: ^6.2.5
+  wtf_sliding_sheet: ^1.1.3
+  google_fonts: ^6.2.1
+  font_awesome_flutter: ^10.7.0
+
 
 dev_dependencies:
   flutter_test:
